--- a/views/index.jade
+++ b/views/index.jade
@@ -18,18 +18,6 @@ html.full
     script(src='js/controllers/controller.js').
     script(src='js/services/fileListService.js').
     style.
-      @font-face {
-        font-family: 'Cabin';
-        font-style: normal;
-        font-weight: 400;
-        src: local('Cabin Regular'), local('Cabin-Regular'), url(/stylesheets/fonts/cabin-regular.woff2) format('woff2'), url(/stylesheets/fonts/cabin-regular.woff) format('woff');
-      }
-      @font-face {
-        font-family: 'Lobster';
-        font-style: normal;
-        font-weight: 400;
-        src: local('Lobster'), url(/stylesheets/fonts/lobster.woff2) format('woff2'), url(/stylesheets/fonts/lobster.woff) format('woff');
-      }
       .navbar-brand{
         padding-bottom:2px;
       }
@@ -38,8 +26,7 @@ html.full
         margin-right: 10px;
       }
       body{
-        font-family: "Cabin", Arial, sans-serif;
-        font-size: 14px;
+        font-family: Arial, sans-serif !important;
         line-height: 1.42857143;
         color: #ffffff;
         background-color: #108a93;
@@ -57,22 +44,27 @@ html.full
       }
       .avg{
         text-align: center;
-        font-size: 35px;
       }
-      .text{
+      .avg{
+        text-align: center;
       }
-  body(ng-app='nodeApp' ng-controller="controller")
-    nav.navbar.navbar-default
-      .container
-        h1.col-sm-6.no-margin Build Monitor
-        h2.pull-right.no-margin {{Display.Run}}
-    .container
+      .body{
+        font-size: 36px;
+      }
+      .normal-font{
+        font-family: Arial, sans-serif !important;
+      }
+      .red{
+        border-color: #ad1d28;
+      }
+  body(ng-app='nodeApp' ng-controller="controller").body
+    .container(style="width: 100%;")
       h1 Averages
       .row
         div.col-sm-4
           .well
             .avg
-              h1.no-margin Today
+              h1.no-margin.normal-font Today
               hr
               div {{Display.Today.Average}}
               div {{Display.Today.Queue}}
@@ -84,7 +76,7 @@ html.full
         div.col-sm-4
           .well 
             .avg
-              h1.no-margin Yesterday
+              h1.no-margin.normal-font Yesterday
               hr
               div {{Display.Yesterday.Average}}
               div {{Display.Yesterday.Queue}}
@@ -96,7 +88,7 @@ html.full
         div.col-sm-4
           .well
             .avg
-              h1.no-margin Last Week
+              h1.no-margin.normal-font Last Week
               hr
               div {{Display.Week.Average}}
               div {{Display.Week.Queue}}
@@ -105,11 +97,11 @@ html.full
                 {{Display.Week.Success}}
                 span.glyphicon.glyphicon-remove.icon
                 {{Display.Week.Fail}}
-      hr
+      hr.red
       h1 Agents
       .row
         span.col-sm-3(ng-repeat="agent in Display.Agents")
-          .well.avg
+          .well.avg-small
             {{agent.name}}
             span.glyphicon.glyphicon-ok.icon(ng-show="agent.enabled")
             span.glyphicon.glyphicon-remove.icon(ng-show="!agent.enabled")
